# ADRD_Brain_Aging

./: .gitignore  README.md  glm_pb_diffexp.ipynb  glmmtmb_diffexp.ipynb  manually_run_glmmTMB_GCP.md  post_glmm_diffexp.ipynb  post_glmm_zi_diffexp.ipynb  prep_pool_sample_info.ipynb  pyproject.toml  scvi_id_zi_features.ipynb
phase1/: README.md  create_anndata_with_demuxlet_identified_donors.ipynb  figure_results_heatmap.ipynb  frmt_glmmtmb_diffexp.ipynb  glmmtmb_diffexp.ipynb  gsea_simple.ipynb  manually_add_broad_celltypes.ipynb  manually_run_glmmTMB_GCP.md  post_glmm_zi_diffexp.ipynb  prep_hbcc_genos.ipynb  scvi_id_zi_features.ipynb  setup_and_pull.ipynb
phase1/analyses/: check_senescence.ipynb  compare_de_methods.ipynb  compare_discover_replication.ipynb  compare_discover_replication_glmpb.ipynb  frmt_broad_types_by_region_glmmtmb_prep.ipynb  glm_pb_diffexp.ipynb  glmmTMB.R  (+6 more)
phase2/: MultiVI_analysis.ipynb  README.md  cellranger-arc_aggr.ipynb  cellranger-atac_aggr.ipynb  compare_celltype_predictions.ipynb  convert_arc_data.ipynb  create_aggr_anndata_with_demuxlet_identified_donors.ipynb  create_anndata_with_demuxlet_identified_donors.ipynb  create_consensus_peaks_bed.ipynb  migrate_phase1_gex_pools.ipynb  pm_run_cellassign.ipynb  pm_run_create_demultiplexed_gex_anndatas.ipynb  populate_full_anndata.ipynb  prep_genotypes.ipynb  run_analyses.sh  run_demuxlet_wdl_job.ipynb  run_mediation_jobs.sh  run_prep_pb_jobs.sh  run_regression_jobs.sh  scrublet.ipynb  scvi_cellassign.ipynb
pm_nb_runners/: glmmtmb_diffexp_runner.ipynb  glmmtmb_diffexp_runner_cf.ipynb
(+193 files in other folders)
