[project]
name = "adrd-brain-aging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogluon>=1.4.0",
    "igraph>=1.0.0",
    "jupyterlab>=4.4.7",
    "jupyterlab-git>=0.51.2",
    "pygraphviz>=1.14",
    "scanpy>=1.11.4",
    "scikit-misc>=0.5.2",
    "scvi-tools>=1.3.3",
]
